feat: replace Users with class component

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,14 +5,11 @@
   padding: 10px 10px;
 }
 
-a {
-  text-decoration: none;
-}
-
 .item a {
+  text-decoration: none;
   color: whitesmoke;
 }
 
-.item a.activeLink {
-  color: aqua;
+.activeLink {
+  color: aqua !important;
 }
