--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -6,14 +6,16 @@
 
 .dialog {
   margin-bottom: 5px;
-} 
+}
 
 .dialog a {
+  text-decoration: none;
+  color: inherit;
   margin-left: 10px;
 }
 
 .dialog img {
-  width: 15px
+  width: 15px;
 }
 
 .inputField textarea {
