refactor: add button component

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -72,11 +72,11 @@
 }
 
 .unfollowButton {
-  background-color: lightcoral;
+  background-color: lightcoral !important;
 }
 
 .followButton {
-  background-color: #1f3a4c;
+  background-color: #1f3a4c !important;
 }
 
 .pagesContainer * {
