--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -18,12 +18,26 @@
   width: 15px;
 }
 
-.inputField textarea {
-  height: 30px;
-}
-
 .messages {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.buttonContainer {
+  margin-top: 10px;
+  position: relative;
+  width: inherit;
+}
+
+.inputField {
+  width: 600px;
+  border-radius: 5px;
+}
+
+.inputField textarea {
+  border: 0;
+  padding: 10px;
+  width: inherit;
+  /* width: inherit; */
 }
