--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -89,6 +89,10 @@
   border-radius: 10px;
 }
 
+.actionButton button:disabled {
+  background-color: gray !important;
+}
+
 .unfollowButton {
   background-color: lightcoral !important;
 }
