--- a/src/components/common/loaders/DefaultLoader.module.css
+++ b/src/components/common/loaders/DefaultLoader.module.css
@@ -16,8 +16,8 @@
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  border: 6px solid #fff;
-  border-color: #fff transparent #fff transparent;
+  border: 6px solid black;
+  border-color: black transparent black transparent;
   animation: ldsDualRing 1.2s linear infinite;
 }
 @keyframes ldsDualRing {
